clusters/doa-cluster/base/keycloak/deployment.yaml
#
# Reference:
# https://github.com/keycloak/keycloak/discussions/12594
#

apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
spec:
  selector:
    component: app
  clusterIP: None
  sessionAffinity: None
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: jgroups
      port: 7600
      protocol: TCP
      targetPort: jgroups
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    monitor: keycloak
spec:
  selector:
    component: app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: app
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: 'keycloak'
          image: 'quay.io/keycloak/keycloak:23.0'
          args: ['start']
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 400Mi
            limits:
              cpu: 300m
              memory: 500Mi
          readinessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 30
            httpGet:
              path: /realms/sequoia
              port: 8080
