clusters/doa-cluster/base/keycloak/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: keycloak
spec:
  selector:
    component: postgressql-db
  type: NodePort
  ports:
    - name: pgql
      port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 30007
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgressql-db
  namespace: keycloak
  labels:
    app: keycloak
spec:
  serviceName: postgressql-db-service
  replicas: 1
  selector:
    matchLabels:
      component: postgressql-db
  template:
    metadata:
      labels:
        component: postgressql-db
    spec:
      containers:
        - name: postgressql-db
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 500Mi
          volumeMounts:
            - name: keycloak-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      terminationGracePeriodSeconds: 60
      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
