clusters/doa-cluster/base/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: 'keycloak-dashboard-https'
  namespace: 'keycloak'
spec:
  entryPoints:
    - 'websecure'
  routes:
    - match: 'Host(`keycloak.orleans.io`)'
      kind: 'Rule'
      services:
        - name: 'keycloak'
          port: 8080
      # middlewares:
      #   - name: security-no-frame-deny
      #     namespace: kube-system
  tls:
    secretName: wildcard-orleans-io
